# wazuh-sca-rules-ru

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
.github/workflows/: codeql.yml  main.yml  release.yml  scorecard.yml  semgrep.yml
tests/: test_base.py
wazuh_sca_rules_ru/: __main__.py  base.py  cli.py
wazuh_sca_rules_ru/translator/: translator.py
