[tool.poetry]
name = "wazuh_sca_rules_ru"
version = "0.1.0"
description = ""
authors = ["franchb"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
openai = "^1.42.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
coverage = "^7.6.1"
flake8 = "^7.1.1"
black = "^24.8.0"
isort = "^5.13.2"
pytest-cov = "^5.0.0"
mypy = "^1.11.1"
gitchangelog = "^3.0.4"
mkdocs = "^1.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
wazuh_sca_rules_ru = 'wazuh_sca_rules_ru.__main__:main'
